--- a/HELMET/manifest.json
+++ b/HELMET/manifest.json
@@ -4,7 +4,7 @@
     "description": "A destiny 2 news extension that combines all the relevant news sources into one centralized space.",
     "version": "0.0.1",
     "action": {
-        "default_popup": "src/main.html",
+        "default_popup": "src/index.html",
         "default_title": "H.E.L.M.E.T"
     }
 }
