--- a/HELMET/package.json
+++ b/HELMET/package.json
@@ -7,9 +7,11 @@
     "start": "tsc && node dist/tabs.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Q4kK",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "node-fetch": "^3.3.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
